# trace

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  getdata_singer.py  pyproject.toml  run_arghmm.py  setup.py  summarize.py
example_data/: n10_seed10_A.tsz  n10_seed10_null_A.tsz  test_summarize.summary.txt
ghosthmm/: arg_hmm.py  arg_hmm_bucket.py  arg_hmm_bucket_utils.pyx  ghosthmm.py  utils.py
scripts/: getdata_singer.py  summarize.py
test/: test_extract_cli.py  test_trace.py  test_utils.py
tests/: test_extract_cli.py  test_infer_cli.py  test_summarize_cli.py  test_trace.py
trace/: __init__.py  cli.py  trace.py  trace_utils.pyx  utils.py
tracehmm/: __init__.py  extract_cli.py  infer_cli.py  summarize_cli.py  trace.py  trace_utils.pyx  utils.py
