[build-system]
requires = [
    "setuptools>=70",
    "wheel",
    "cython",
    "scipy",
    "numpy",
    "pandas",
    "cyvcf2",
    "tqdm",
    "Click",
    "tskit",
    "joblib",
    "pomegranate",
    "KDEpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "ghosthmm"
description = "HMM-based method to infer latent admixture ."
keywords = [""]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
requires-python = ">= 3.11"
dependencies = ["numpy", "scipy", "pandas", "Cython", "Click", "cyvcf2"]
dynamic = ["version"]
authors = [{name = "Arjun Biddanda", email = "abiddan1@jhu.edu"}, {name="Yulin Zhang", email="zhangyulin9806@berkeley.edu"}]

[project.urls]
Homepage = "https://github.com/aabiddanda/ghosthmm"

[project.optional-dependencies]
tests = [ "pytest", "pytest-cov", "hypothesis", "flake8", "sphinx"]

[project.scripts]
ghosthmm = "ghosthmm.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "ghosthmm.__version__"

[tool.cython-lint]
max-line-length = 180
ignore = ['E501','E503', 'E504']
