[build-system]
requires = [
    "setuptools>=70",
    "wheel",
    "cython",
    "scipy",
    "numpy",
    "pandas",
    "tqdm",
    "Click",
    "tskit",
    "tszip",
    "pybedtools",
    "intervaltree",
]
build-backend = "setuptools.build_meta"

[project]
name = "tracehmm"
description = "A method to infer introgression without archaic references."
keywords = ["admixture", "introgression"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
requires-python = ">= 3.9"
dependencies = ["numpy", "scipy", "pandas", "Cython", "Click", "tqdm", "tskit", "tszip", "intervaltree", "pybedtools"]
dynamic = ["version"]
authors = [{name = "Arjun Biddanda", email = "abiddan1@jhu.edu"}, {name="Yulin Zhang", email="zhangyulin9806@berkeley.edu"}]

[project.urls]
Homepage = "https://github.com/aabiddanda/trace"

[project.optional-dependencies]
tests = [ "pytest", "pytest-cov", "hypothesis", "flake8", "sphinx"]

[project.scripts]
trace-extract= "tracehmm.extract_cli:main"
trace-infer = "tracehmm.infer_cli:main"
trace-summarize = "tracehmm.summarize_cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.dynamic.version]
attr = "tracehmm.__version__"

[tool.cython-lint]
max-line-length = 180
ignore = ['E501','E503', 'E504']
